import crossConfigPluginsConfig from './projects/cross-config-plugins.eslint.config.js';
import { testProject } from './utils.js';

testProject('cross-config-plugins', crossConfigPluginsConfig);
