// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-config-plugins > cross-config-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "e18e/prefer-array-at",
      "e18e/prefer-includes",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-plugins --js-plugins > cross-config-plugins--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "jsPlugins": [
      "@e18e/eslint-plugin",
    ],
    "plugins": [],
    "rules": {
      "e18e/prefer-array-at": "error",
      "e18e/prefer-includes": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-plugins --type-aware > cross-config-plugins--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "e18e/prefer-array-at",
      "e18e/prefer-includes",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-plugins merge > cross-config-plugins--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "e18e/prefer-array-at",
      "e18e/prefer-includes",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;
